infra/k8s/db/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easypay-db
  namespace: easypay
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: easypay-backend
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: easypay-postgres-data-storage
          resources:
            limits:
              memory: "500Mi" # Maximum amount of ram in a container
            requests:
              memory: "100"    # minimum amount of ram available in a Pod
      volumes:
        - name: easypay-postgres-data-storage
          persistentVolumeClaim:
            claimName: easypay-postgres-pvc
