infra/k8s/db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easypay-backend-service
  namespace: easypay
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: "postgres"
      protocol: TCP
      port: 5432
      targetPort: 5432
